update the buttom text

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <div class="header-actions">
                     <button class="btn-primary" onclick="handleStartPractice()">
                         <i class="fas fa-play"></i>
-                        Start Your Practice
+                        Get Started For Free
                     </button>
                 </div>
             </div>
