change of colors and logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo-section">
-                    <img src="logo.svg" alt="Blue Exams Logo" class="header-logo">
+                    <img src="Imagens/Logo Blue Exams .png" alt="Blue Exams Logo" class="header-logo">
                 </div>
                 <div class="header-actions">
                     <button class="btn-primary" onclick="handleStartPractice()">
@@ -165,7 +165,6 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-brand">
-                    <img src="logo.svg" alt="Blue Exams" class="footer-logo">
                     <p class="footer-tagline">Professional EA mock exam training</p>
                 </div>
                 
