changing the logo size, slogan alignment and changing the text about the price

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
                 <div class="logo-section">
                     <img src="Imagens/Logo Blue Exams .png" alt="Blue Exams Logo" class="header-logo">
                 </div>
+                <div class="slogan-section">
+                    <p class="slogan">Don't waste your official mock exams</p>
+                </div>
                 <div class="header-actions">
                     <button class="btn-primary" onclick="handleStartPractice()">
                         <i class="fas fa-play"></i>
                         Get Started For Free
                     </button>
                 </div>
-            </div>
-            <div class="slogan-section">
-                <p class="slogan">Don't waste your official mock exams</p>
             </div>
         </div>
     </header>
@@ -110,7 +110,7 @@
                         <i class="fas fa-coins"></i>
                     </div>
                     <h3 class="feature-title">Up to 15 Mock Tests</h3>
-                    <p class="feature-description">Only R$200 (~$40) for comprehensive practice - fraction of official test costs</p>
+                    <p class="feature-description">Only R$200 for comprehensive practice - fraction of official test costs</p>
                 </div>
                 
                 <div class="feature-card">
@@ -153,7 +153,7 @@
                     </button>
                     <div class="cta-price">
                         <span class="price-label">One-time payment</span>
-                        <span class="price-amount">R$200 (~$40)</span>
+                        <span class="price-amount">R$200</span>
                     </div>
                 </div>
             </div>
